--- a/lib/views/index.slim
+++ b/lib/views/index.slim
@@ -8,7 +8,7 @@ javascript:
   window.onload = function(){
     (function(){
       var show = function(el){
-        return function(msg){ el.innerHTML = msg + '' + el.innerHTML; }
+        return function(msg){ el.innerHTML = msg + ' '+ '<br />' + el.innerHTML; }
       }(document.getElementById('msgs'))
 
       var ws       = new WebSocket('ws://' + window.location.host + window.location.pathname);
